<resources>
    <string name="app_name">Lab2</string>
    <string name="game_title">WHACK-A-MOLE</string>
    <string name="play_game">Play Game</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="time_default">Time: 30</string>
    <string name="score_default">Score: 0</string>
    <string name="mole_hole">Mole Hole</string>

    <string name="score_display">Score: %d</string>
    <string name="enter_name">Enter name</string>
    <string name="name_hint">Your name</string>
    <string name="avatar_colour">Avatar Colour</string>
    <string name="grey">Grey</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="pink">Pink</string>
    <string name="submit">Submit</string>

    <string name="default_name">--</string>
    <string name="default_score">0</string>
    <string name="avatar">Avatar</string>
</resources>