<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/white"
android:orientation="vertical"
android:gravity="center_horizontal"
android:padding="20dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:src="@drawable/img_wackamole_banner"
        android:scaleType="centerInside"
        android:contentDescription="@string/game_title"/>


<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/play_game"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:onClick="onClickPlay"
    android:layout_marginBottom="20dp"/>

<!-- 排行榜按钮 -->
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/leaderboard"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:onClick="onClickLeaderboard"/>

</LinearLayout>