<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:src="@drawable/img_wakamole_text"
        android:scaleType="centerInside"
        android:contentDescription="@string/game_title"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tv_timer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_default"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_default"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <!-- 第 1 行地鼠洞 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iv_mole_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/img_without_mole"
                android:scaleType="centerInside"
                android:contentDescription="@string/mole_hole"
                android:clickable="true"
                android:onClick="onMoleClick"/>


            <ImageView
                android:id="@+id/iv_mole_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/img_without_mole"
                android:scaleType="centerInside"
                android:contentDescription="@string/mole_hole"
                android:clickable="true"
                android:onClick="onMoleClick"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <ImageView
                android:id="@+id/iv_mole_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/img_without_mole"
                android:scaleType="centerInside"
                android:contentDescription="@string/mole_hole"
                android:clickable="true"
                android:onClick="onMoleClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iv_mole_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/img_without_mole"
                android:scaleType="centerInside"
                android:contentDescription="@string/mole_hole"
                android:clickable="true"
                android:onClick="onMoleClick"/>

            <ImageView
                android:id="@+id/iv_mole_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/img_without_mole"
                android:scaleType="centerInside"
                android:contentDescription="@string/mole_hole"
                android:clickable="true"
                android:onClick="onMoleClick"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <ImageView
                android:id="@+id/iv_mole_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/img_without_mole"
                android:scaleType="centerInside"
                android:contentDescription="@string/mole_hole"
                android:clickable="true"
                android:onClick="onMoleClick"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_mole_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/img_without_mole"
                android:scaleType="centerInside"
                android:contentDescription="@string/mole_hole"
                android:clickable="true"
                android:onClick="onMoleClick"/>

            <ImageView
                android:id="@+id/iv_mole_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/img_without_mole"
                android:scaleType="centerInside"
                android:contentDescription="@string/mole_hole"
                android:clickable="true"
                android:onClick="onMoleClick"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <ImageView
                android:id="@+id/iv_mole_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/img_without_mole"
                android:scaleType="centerInside"
                android:contentDescription="@string/mole_hole"
                android:clickable="true"
                android:onClick="onMoleClick"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>